--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  
+
   <title>Frontend Mentor | Beta sign up split layout Challenge</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,14 +15,15 @@
 <body>
   All your files in one secure location, accessible anywhere.
 
-  Fylo stores all your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family and co-workers.
-
+  <p>Fylo stores all your most important files in one secure location.
+  Access them wherever you need, share and collaborate with friends,
+  family and co-workers.</p>
+<form>
+  <formset>
+    <legend>
   Sign up for early access
 
-  Sign Up
-
+  <button type="submit">Sign Up</button>
   Privacy Policy
 
   <footer>
