--- a/index.html
+++ b/index.html
@@ -13,8 +13,32 @@
   </style>
 </head>
 <body>
-  All your files in one secure location, accessible anywhere.
-
+  <header>
+    <a href="/">
+      <img src="images/logo.svg">
+    </a>
+  <h1>All your files in one secure location, accessible anywhere.</h1>
+<ul>
+  <li>
+    <a href="https://twitter.com/ahand411">
+      <img src="/assets/icons/_ionicons_svg_logo-twitter.svg">
+    </a>
+  </li>
+</ul>
+<ul>
+  <li>
+    <a href="https://facebook.com">
+      <img src="/assets/icons/_ionicons_svg_logo-facebook.svg">
+    </a>
+  </li>
+</ul>
+<ul>
+  <li>
+    <a href="#">
+      <img src="/assets/icons/_ionicons_svg_ios-mail.svg">
+    </a>
+  </li>
+</ul>
   <p>Fylo stores all your most important files in one secure location.
   Access them wherever you need, share and collaborate with friends,
   family and co-workers.</p>
