--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
 <body>
   <header>
     <a href="/">
-      <img src="images/logo.svg">
+      <img src="/assets/img/logo.svg">
     </a>
   <h1>All your files in one secure location, accessible anywhere.</h1>
 <ul>
   <li>
-    <a href="https://twitter.com/ahand411">
-      <img src="/assets/icons/_ionicons_svg_logo-twitter.svg">
+    <a href="https://twitter.com/ahand411" >
+      <img src="/assets/icons/_ionicons_svg_logo-twitter.svg" width="30px">
     </a>
   </li>
 </ul>
 <ul>
   <li>
     <a href="https://facebook.com">
-      <img src="/assets/icons/_ionicons_svg_logo-facebook.svg">
+      <img src="/assets/icons/_ionicons_svg_logo-facebook.svg" width="30px">
     </a>
   </li>
 </ul>
 <ul>
   <li>
     <a href="#">
-      <img src="/assets/icons/_ionicons_svg_ios-mail.svg">
+      <img src="/assets/icons/_ionicons_svg_ios-mail.svg" width="30px">
     </a>
   </li>
 </ul>
