--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
       <img src="/assets/icons/_ionicons_svg_logo-twitter.svg" width="30px">
     </a>
   </li>
+</ul>
+<ul>
   <li>
     <a href="https://facebook.com">
       <img src="/assets/icons/_ionicons_svg_logo-facebook.svg" width="30px">
     </a>
   </li>
+</ul>
+<ul>
   <li>
     <a href="#">
       <img src="/assets/icons/_ionicons_svg_ios-mail.svg" width="30px">
@@ -40,12 +44,16 @@
   family and co-workers.</p>
 <form>
   <formset>
-    <legend>
-  Sign up for early access
-
-  <button type="submit">Sign Up</button>
+    <legend>Sign up for early access</legend>
+    <label>Enter your email address>
+      <input type="email">
+    </label>
+<button type="submit">Sign Up</button>
+</fieldset>
+</form>
+<p>
   Privacy Policy
-
+</p>
   <footer>
     <p class="attribution">
       This page started life as a challenge on <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> 🎉
