fix email addess

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 <form>
   <formset>
     <legend>Sign up for early access</legend>
-    <label>Enter your email address>
+    <label>Enter your email address
       <input type="email">
     </label>
 <button type="submit">Sign Up</button>
 </fieldset>
 </form>
-<p>
+<p align="center">
   Privacy Policy
 </p>
   <footer>
